--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
     commands:
       - rm -rf public
       - hugo
-      - hugo deploy
+      - hugo deploy --force
   post_build:
     commands:
       - echo Build completed on `date`
